// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BTree cow 1`] = `
"{
    "leaf": [
        "1=1",
        "2=2",
        "3=3"
    ]
}"
`;

exports[`BTree cow 2`] = `
"{
    "leaf": [
        "1=20",
        "2=2",
        "3=3"
    ]
}"
`;

exports[`BTree cow 3`] = `
"{
    "keys": [
        2
    ],
    "children": [
        {
            "leaf": [
                "1=1"
            ]
        },
        {
            "leaf": [
                "2=2",
                "3=3",
                "4=4"
            ]
        }
    ]
}"
`;

exports[`BTree cow 4`] = `
"{
    "leaf": [
        "2=2",
        "3=3"
    ]
}"
`;

exports[`BTree cow 5`] = `
"{
    "leaf": [
        "1=1",
        "2=2",
        "3=3"
    ]
}"
`;

exports[`BTree degree 2 1`] = `
"{
    "leaf": []
}"
`;

exports[`BTree degree 2 2`] = `
"{
    "leaf": [
        "10=10"
    ]
}"
`;

exports[`BTree degree 2 3`] = `
"{
    "leaf": [
        "10=10",
        "20=20"
    ]
}"
`;

exports[`BTree degree 2 4`] = `
"{
    "leaf": [
        "10=10",
        "20=20",
        "30=30"
    ]
}"
`;

exports[`BTree degree 2 5`] = `
"{
    "keys": [
        20
    ],
    "children": [
        {
            "leaf": [
                "10=10"
            ]
        },
        {
            "leaf": [
                "20=20",
                "30=30",
                "40=40"
            ]
        }
    ]
}"
`;

exports[`BTree degree 2 6`] = `
"{
    "keys": [
        20
    ],
    "children": [
        {
            "leaf": [
                "8=8",
                "10=10",
                "15=15"
            ]
        },
        {
            "leaf": [
                "20=20",
                "30=30",
                "40=40"
            ]
        }
    ]
}"
`;

exports[`BTree degree 2 7`] = `
"{
    "keys": [
        20,
        21
    ],
    "children": [
        {
            "leaf": [
                "8=8",
                "10=10",
                "15=15"
            ]
        },
        {
            "leaf": [
                "20=20"
            ]
        },
        {
            "leaf": [
                "21=21",
                "30=30",
                "40=40"
            ]
        }
    ]
}"
`;

exports[`BTree degree 2 8`] = `
"{
    "keys": [
        20,
        21,
        30
    ],
    "children": [
        {
            "leaf": [
                "8=8",
                "10=10",
                "15=15"
            ]
        },
        {
            "leaf": [
                "20=20"
            ]
        },
        {
            "leaf": [
                "21=21"
            ]
        },
        {
            "leaf": [
                "30=30",
                "33=33",
                "40=40"
            ]
        }
    ]
}"
`;

exports[`BTree degree 2 9`] = `
"{
    "keys": [
        20
    ],
    "children": [
        {
            "keys": [
                8
            ],
            "children": [
                {
                    "leaf": [
                        "5=5"
                    ]
                },
                {
                    "leaf": [
                        "8=8",
                        "10=10",
                        "15=15"
                    ]
                }
            ]
        },
        {
            "keys": [
                21,
                30
            ],
            "children": [
                {
                    "leaf": [
                        "20=20"
                    ]
                },
                {
                    "leaf": [
                        "21=21"
                    ]
                },
                {
                    "leaf": [
                        "30=30",
                        "33=33",
                        "40=40"
                    ]
                }
            ]
        }
    ]
}"
`;

exports[`BTree degree 2 10`] = `
"{
    "keys": [
        20
    ],
    "children": [
        {
            "keys": [
                8
            ],
            "children": [
                {
                    "leaf": [
                        "5=5"
                    ]
                },
                {
                    "leaf": [
                        "10=10",
                        "15=15"
                    ]
                }
            ]
        },
        {
            "keys": [
                21,
                30
            ],
            "children": [
                {
                    "leaf": [
                        "20=20"
                    ]
                },
                {
                    "leaf": [
                        "21=21"
                    ]
                },
                {
                    "leaf": [
                        "30=30",
                        "33=33",
                        "40=40"
                    ]
                }
            ]
        }
    ]
}"
`;

exports[`BTree degree 2 11`] = `
"{
    "keys": [
        20
    ],
    "children": [
        {
            "keys": [
                8
            ],
            "children": [
                {
                    "leaf": [
                        "5=5"
                    ]
                },
                {
                    "leaf": [
                        "10=10",
                        "15=15"
                    ]
                }
            ]
        },
        {
            "keys": [
                30
            ],
            "children": [
                {
                    "leaf": [
                        "21=21"
                    ]
                },
                {
                    "leaf": [
                        "30=30",
                        "33=33",
                        "40=40"
                    ]
                }
            ]
        }
    ]
}"
`;

exports[`BTree degree 2 12`] = `
"{
    "keys": [
        20
    ],
    "children": [
        {
            "keys": [
                8
            ],
            "children": [
                {
                    "leaf": [
                        "5=5"
                    ]
                },
                {
                    "leaf": [
                        "10=10",
                        "15=15"
                    ]
                }
            ]
        },
        {
            "keys": [
                30
            ],
            "children": [
                {
                    "leaf": [
                        "21=21"
                    ]
                },
                {
                    "leaf": [
                        "40=40"
                    ]
                }
            ]
        }
    ]
}"
`;

exports[`BTree degree 2 13`] = `
"{
    "keys": [
        8,
        20
    ],
    "children": [
        {
            "leaf": [
                "5=5"
            ]
        },
        {
            "leaf": [
                "10=10",
                "15=15"
            ]
        },
        {
            "leaf": [
                "21=21"
            ]
        }
    ]
}"
`;
